test/conformance/chainsaw/namespaced-deleting-policies/delete-pod/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
  namespace: ndpol-test
spec:
  containers:
  - image: public.ecr.aws/docker/library/nginx:latest
    name: example
