test/conformance/chainsaw/namespaced-deleting-policies/delete-pod/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: namespaced-delete-pod
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: ns.yaml
  - name: step-01
    try:
    - apply:
        file: rbac.yaml
  - name: step-02
    try:
    - apply:
        file: pod.yaml
    - assert:
        file: pod-assert.yaml
  - name: step-03
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy.yaml
  - name: step-04
    try:
    - sleep:
        duration: 1m5s
  - name: step-05
    try:
    - error:
        file: pod-assert.yaml
